@@ -290,6 +290,8 @@ Version 1.13.4+dev:
    * Recognize hotkey release events
    * Allow changing keybindings for scrolling the map.
    * Fix the move-to-targets candidate action of the default AI ignoring tunnels
+   * Fix two rare bugs in the goto candidate action that resulted in goto moves
+     by other units being skipped after a unit could not get to its goal.
    * Replace wmlxgettext tool with new python3 implementation by Nobun:
      https://github.com/AncientLich/wmlxgettext-unoff/
 
